infrastructure/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titilerx-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titilerx-redis
  template:
    metadata:
      labels:
        app: titilerx-redis
    spec:
      containers:
        - name: titilerx-redis
          image: redis:latest
          ports:
            - containerPort: 6379
