infrastructure/kubernetes/titilerx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titilerx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titilerx
  template:
    metadata:
      labels:
        app: titilerx
    spec:
      containers:
        - name: titilerx
          image: public.ecr.aws/k4l9p8h0/eoepca/titilerx:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
