infrastructure/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titilerx-redis
spec:
  selector:
    app: titilerx-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
