infrastructure/kubernetes/titilerx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titilerx-service
spec:
  selector:
    app: titilerx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
