infrastructure/kubernetes/titilerx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titilerx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: titilerx.mkube.dec.earthdaily.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titilerx-service
                port:
                  number: 8000
